--- a/Proyecto/src/main/java/Vista/ListMember.form
+++ b/Proyecto/src/main/java/Vista/ListMember.form
@@ -79,7 +79,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="750" y="0" width="30" height="30"/>
+              <AbsoluteConstraints x="860" y="0" width="30" height="30"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -103,7 +103,7 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="450" y="0" width="330" height="80"/>
+              <AbsoluteConstraints x="450" y="0" width="440" height="80"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -113,7 +113,7 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="20" y="100" width="740" height="320"/>
+              <AbsoluteConstraints x="20" y="100" width="850" height="320"/>
             </Constraint>
           </Constraints>
 
@@ -122,14 +122,16 @@
             <Component class="javax.swing.JTable" name="jTable1">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="7" rowCount="7">
-                    <Column editable="true" title="Member ID" type="java.lang.Object"/>
-                    <Column editable="true" title="First name" type="java.lang.Object"/>
-                    <Column editable="true" title="Last Name" type="java.lang.Object"/>
+                  <Table columnCount="9" rowCount="7">
+                    <Column editable="true" title="First Name" type="java.lang.Object"/>
+                    <Column editable="true" title="Last name" type="java.lang.Object"/>
+                    <Column editable="true" title="ID" type="java.lang.Object"/>
                     <Column editable="true" title="Age" type="java.lang.Object"/>
                     <Column editable="true" title="Phone number" type="java.lang.Object"/>
-                    <Column editable="true" title="Membership Plan" type="java.lang.Object"/>
+                    <Column editable="true" title="Membership Category" type="java.lang.Object"/>
                     <Column editable="true" title="Payment Plan" type="java.lang.Object"/>
+                    <Column editable="true" title="Height" type="java.lang.Object"/>
+                    <Column editable="true" title="Weight" type="java.lang.Object"/>
                   </Table>
                 </Property>
               </Properties>
