--- a/Proyecto/src/main/java/Vista/UpdateDelete.form
+++ b/Proyecto/src/main/java/Vista/UpdateDelete.form
@@ -91,7 +91,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="33" green="33" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Updete &amp; Delete"/>
+            <Property name="text" type="java.lang.String" value="Update &amp; Delete"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
